--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile project(':lib')
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
 
     //Lollipop dialogs https://github.com/lewisjdeane/L-Dialogs and buttons, animations etc...
     compile 'uk.me.lewisdeane.ldialogs:ldialogs:1.2.0@aar'
 
     //test
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.+'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.5.2'
 }
